// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`resolve.extensionAlias should work 1`] = `
""use strict";
var __webpack_exports__ = {};
const bar = 'bar';
const foo = 'foo';
// Relative import paths need explicit file extensions in ECMAScript imports
// when '--moduleResolution' is 'node16' or 'nodenext'.
console.log(foo + bar);
var __webpack_export_target__ = exports;
for(var __webpack_i__ in __webpack_exports__)__webpack_export_target__[__webpack_i__] = __webpack_exports__[__webpack_i__];
if (__webpack_exports__.__esModule) Object.defineProperty(__webpack_export_target__, '__esModule', {
    value: true
});
"
`;

exports[`resolve.extensionAlias should work 2`] = `
"const bar = 'bar';
const foo = 'foo';
// Relative import paths need explicit file extensions in ECMAScript imports
// when '--moduleResolution' is 'node16' or 'nodenext'.
console.log(foo + bar);
"
`;
